Adiciona contorno preto ao texto e substitui barra de carregamento por círculo giratório

--- a/src/pages/Sobre/Sobre.css
+++ b/src/pages/Sobre/Sobre.css
@@ -102,10 +102,9 @@
     font-size: 1.2pc;
 
 }
-.container #title{
+.container p{
     text-align: center;
-    font-family: "Jolly Lodger", system-ui;
     font-size: 4.5pc;
-    font-weight: 600;
+    font-weight: 700;
 
 }
