--- a/src/pages/Pagamento/Pagamento.css
+++ b/src/pages/Pagamento/Pagamento.css
@@ -79,3 +79,31 @@ pix-btn:hover {
     cursor: pointer;
     width: 10pc;
 }
+.success-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.success-message p{
+    font-size: 15px;
+    width: 23pc;
+    font-weight: 200;
+}
+.success-message img{
+    width: 21pc;
+}
+.success-message h1{
+    font-weight: 600;
+    color: #6bc839;;
+}
+.success-message button{
+    padding: 0.5rem;
+    border: none;
+    border-radius: 4px;
+    background-color: #000000;
+    color: white;
+    cursor: pointer;
+    width: 12pc;
+    height: 3pc;
+    font-size: 1.3pc;
+}
