--- a/src/pages/Atracoes/Atracoes.css
+++ b/src/pages/Atracoes/Atracoes.css
@@ -69,3 +69,15 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+@media (max-width: 600px) {
+    #atracoes {
+        font-size: 5rem;
+        font-weight: 900;
+        color: var(--ter);
+        text-shadow: 
+        -1px -5px 0 #000,  
+         1px -2px 0 #000,
+        -1px  2px 0 #000,
+         1px  1px 0 #000; 
+    }
+}
